# labs

./: .gitignore  .gitmodules
Второй курс/Второй семестр/Прикладная математика. Практикум/applied_mathematics/: .gitignore  pyproject.toml
Второй курс/Второй семестр/Прикладная математика. Практикум/applied_mathematics/applied_mathematics/: lab_1.py  lab_4.py  lab_5.py
Второй курс/Второй семестр/Прикладная математика. Практикум/applied_mathematics/applied_mathematics/lab_2/: task_1.py  task_2.py
Второй курс/Второй семестр/Прикладная математика. Практикум/applied_mathematics/applied_mathematics/lab_3/: task_1.py  task_2.py  task_3.py
Третий курс/Второй семестр/Математические методы распознавания образов/labs/: pyproject.toml
Третий курс/Второй семестр/Математические методы распознавания образов/labs/docs/: model.pt  result_lab03.csv  Распознавание образов Лабораторная работа №2.docx  Распознавание образов лабораторная работа №1.docx
Третий курс/Второй семестр/Математические методы распознавания образов/labs/labs/: Image.py  read_file.py  show_file.py  show_test_images.py
Третий курс/Второй семестр/Математические методы распознавания образов/labs/labs/lab01/: __init__.py  task1.py  task2.py  task3.py
Третий курс/Второй семестр/Математические методы распознавания образов/labs/labs/lab02/: __init__.py  lab02-cpu.py  lab02-gpu.py  task1.py
Третий курс/Второй семестр/Математические методы распознавания образов/labs/labs/lab03/: lab03-cpu.py  lab03-gpu.py
Третий курс/Первый семестр/Теория графов для программистов/graphs/: README.md  pyproject.toml
Третий курс/Первый семестр/Теория графов для программистов/graphs/graphs/: graph_utils.py
Третий курс/Первый семестр/Теория графов для программистов/graphs/graphs/task12/: __init__.py  task1.py  task2.py
Третий курс/Первый семестр/Теория графов для программистов/graphs/graphs/task18/: __init__.py  task_a.py  task_b.py  task_c.py
Третий курс/Первый семестр/Теория графов для программистов/graphs/graphs/very_old_implementations/: dijksta.py
Третий курс/Первый семестр/Теория графов для программистов/graphs/tests/: test_graphs.py
(+490 files in other folders)
