[tool.poetry]
name = "applied_mathematics"
version = "0.1.0"
description = "Прикладная математика. Практикум. 2 курс первый семестр"
authors = ["Arthur Hakimov <verybigfolder@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18.2"

[tool.poetry.dev-dependencies]
mypy = "^0.770"
isort = "^5.3.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
