[tool.poetry]
name = "labs"
version = "0.1.0"
description = ""
authors = ["Arthur Khakimov <verybigfolder@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.20.1"
matplotlib = "^3.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
